@@ -6,13 +6,13 @@ public class ExternalApiException extends RuntimeException {
     private final int statusCode;
     
     public ExternalApiException(String apiName, int statusCode, String message) {
-        super(String.format("API %s failed with status %d: %s", apiName, statusCode, message));
+        super("API %s failed with status %d: %s".formatted(apiName, statusCode, message));
         this.apiName = apiName;
         this.statusCode = statusCode;
     }
     
     public ExternalApiException(String apiName, String message, Throwable cause) {
-        super(String.format("API %s failed: %s", apiName, message), cause);
+        super("API %s failed: %s".formatted(apiName, message), cause);
         this.apiName = apiName;
         this.statusCode = 0;
     }
